# MegaBoy

./: .clang-format  .gitignore  CMakeLists.txt  DMAController.cpp  DMAController.h  DMG_ROM.h  Gameboy.cpp  Gameboy.h  HostMemory.cpp  HostMemory.h  Joypad.cpp  Joypad.h  MegaBoyDebugger.cpp  MegaBoyDebugger.h  README.md  Timer.cpp  Timer.h  arithmetic_instructions.h  bit_instructions.h  cpu.cpp  cpu.h  cputests.cpp  ex_block_search_instruction.h  gameboy_instructions.h  general_instructions.h  in_out_instructions.h  jump_instructions.h  jump_tests.h  load_instructions.h  main.cpp  main_linux.cpp  main_mac_wx.cpp  main_macos.mm  main_windows.cpp  mytests.cpp  opcodes.txt
CPU/: CMakeLists.txt  arithmetic_instructions.h  arithmetic_instructions_disassembler.h  bit_instructions.h  cpu.cpp  cpu.h  cpu_arithmetic_instructions.cpp  cpu_bit_instructions.cpp  cpu_general_instructions.cpp  cpu_jump_instructions.cpp  cpu_load_instructions.cpp  disassembler.cpp  disassembler.h  disassembler_arithmetic.cpp  disassembler_jump.cpp  disassembler_load_instructions.cpp  general_instructions.h  in_out_instructions.h  jump_instructions.h  load_instructions.h
LCD/: FIFO.cpp  FIFO.h  Fetcher.cpp  Fetcher.h  lcd.cpp  lcd.h  lcd_regs.h
UI/: DisassemblyWindow.cpp  DisassemblyWindow.h  RegisterWindow.cpp  RegisterWindow.h  UIConfig.h
UIWX/: CMakeLists.txt  MainFrame.cpp  MainFrame.h
cartridge/: CMakeLists.txt  Cartridge.cpp  Cartridge.h  CartridgeHeader.h  MBC.cpp  MBC.h
disassembler/: CMakeLists.txt  disassembler.cpp  disassembler.h  disassembler_arithmetic.cpp  disassembler_bit.cpp  disassembler_jump.cpp  disassembler_load.cpp
tests/: cputests.cpp  disassembler_tests.cpp  dma_controller_tests.cpp  jump_tests.h  lcd_tests.cpp  timer_tests.cpp
